@@ -366,7 +366,7 @@ class SpecialNewpages extends IncludableSpecialPage {
 
 		$feed->outHeader();
 		if( $pager->getNumRows() > 0 ) {
-			foreach (  $pager->mResult->fetchObject() as $row ) {
+			foreach ( $pager->mResult as $row ) {
 				$feed->outItem( $this->feedItem( $row ) );
 			}
 		}
